--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 <title> The five Pillars of Islam </title>
 </head>
 <body style: "background:tan;" >
-<h1> Shahada </h1>
-<p> </p>
+  <h1> <center> <u>The Five Pillars of Islam </u> </center> </h1>
+  <h2> Shahada </h2>
+  <p> </p>
 <br>
 <h2> Salat </h2>
 <p> </p>
 <br>
-<h3> Sawm </h3>
+<h2> Sawm </h2>
 <p> </p>
 <br>
-<h4> Zakat </h4>
+<h2> Zakat </h2>
 <p> </p>
 <br>
-<h5> Hajj </h5> 
+<h2> Hajj </h2> 
 <p> </p>
 <hr> </hr>
 </html>
