--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 <title> The five Pillars of Islam </title>
 </head>
 <body style: "background:tan;" >
-  <h1> <center> <u>The Five Pillars of Islam </u> </center> </h1>
+<h1> <center> <u>The Five Pillars of Islam </u> </center> </h1>
   <h2> Shahada </h2>
-  <p> </p>
+  <p> The Shahada is the first step to becoming a muslim. </p>
 <br>
 <h2> Salat </h2>
-<p> </p>
-<br>
+  <p> This table explains the 5 daily prayes:
+  <table> 
+  <th>"daily prayers"</th> 
+  <tr>"6"</tr>
+    <td> "3" </td>
+  </table>
+  </p>
+  <br>
 <h2> Sawm </h2>
 <p> </p>
 <br>
