--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <br>
 <h2> Salat </h2>
   <p> This table explains the 5 daily prayes:
-  <table> 
-  <th>"daily prayers"</th> 
-  <tr>"6"</tr>
-    <td> "3" </td>
+  <table>
+    <tr>
+      <th> Names </th> 
+      <th> Rakat </th>
+      <th> Timing </th>
+    </tr>
+    <tr>
+      
   </table>
   </p>
   <br>
@@ -26,4 +30,5 @@
 <h2> Hajj </h2> 
 <p> </p>
 <hr> </hr>
+<h3> citation </h3>
 </html>
