--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body style: "background:tan;" >
 <h1> <center> <u>The Five Pillars of Islam </u> </center> </h1>
   <h2> Shahada </h2>
-  <p> The Shahada is the first step to becoming a muslim. </p>
+  <p> The Shahada is the first step to becoming a Muslim. </p>
 <br>
 <h2> Salat </h2>
   <p> This table explains the 5 daily prayes:
@@ -17,6 +17,9 @@
       <th> Timing </th>
     </tr>
     <tr>
+      <th> Fajir </th>
+      <th> 2 </th>
+      <th> Before sunrise </th>
       
   </table>
   </p>
