--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
       <th> Fajir </th>
       <th> 2 </th>
       <th> Before sunrise </th>
+    </tr>
+    <tr> 
+      <th> Duhar </th>
+      <th> 4 </th>
+      <th> Mid day </th>
+    </tr>
+    <tr>
+      <td> Asr </td>
+      <td> 4 </td>
+      <td> Noon </td>
+    </tr>
+    <tr>
+      <td> Maghrib </td>
+      <td> 3 </td>
+      <td> Sunset </td>
+    </tr>
+    <tr>
+      <td> Isha </td>
+      <td> 4 </td>
+      <td> Night time </td> 
       
   </table>
   </p>
