--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <h2> Salat </h2>
   <p> This table explains the 5 daily prayes:
   <table>
+    <table border="1">
+      <caption> The Daily Prayers </caption>
     <tr>
       <th> Names </th> 
       <th> Rakat </th>
