--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body style: "background:tan;" >
 <h1> <center> <u>The Five Pillars of Islam </u> </center> </h1>
   <h2> Shahada </h2>
-  <p> The Shahada is the first step to becoming a Muslim. </p>
+  <p> The Shahada is the first step to becoming a Muslim. 
+    Ash-hado= I bare witness. Ana la illaha illa Allah= That there is no god worthy of worship, but Allah. Wa Ana Muhammad Rasool-Allah= And that Muhammad is the prophet.  </p>
 <br>
 <h2> Salat </h2>
   <p> This table explains the 5 daily prayes:
@@ -65,10 +66,14 @@
     </p>
 <br>
 <h2> Zakat </h2>
-<p> </p>
-<br>
+<p> Zakat is an arabic term for charity. This is every important to Muslims, because it reminds them that they shouldn't be greedy and always share. This is a helpful website that explains why Muslims do Zakat:
+  <a href= "https://www.islamichelp.org.uk/zakat/" > </a>
+  </p>
+  <br>
 <h2> Hajj </h2> 
-<p> </p>
+<p> Hajj is another Arabic term meaning: Pilgramage. Muslims go once a year to Mekkah to make their duties at the kabaa (the house of their lord). If they are not able ot pay or they are not in good health, they dont have to go. This is a website to help you know more about it:
+  <a href= "http://theconversation.com/explaining-the-muslim-pilgrimage-of-hajj-83284" > </a>
+  </p>
 <hr> </hr>
 <h3> citation </h3>
   <ul>
