--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
   <ul>
     <li> <a href= "https://www.islamicity.org/?category_name=americas&tag=fasting-sawm&case=-{title:category.americas|post_tag.fasting-sawm}{id:95}" > </li> </a>
 <li> <a href= "https://insideislam.wisc.edu/2012/01/salah-for-the-mind-body-and-soul/" > </li> </a> 
+<li> <a href= "https://www.metmuseum.org/learn/educators/curriculum-resources/art-of-the-islamic-world/unit-one/the-five-pillars-of-islam" > </li> </a>
 </ul>
  For any issues with this webpage contact:
 Iamthebest@gmail.com
