--- a/index.html
+++ b/index.html
@@ -2,32 +2,57 @@
 <html>
 <head>   
 <title> The five Pillars of Islam </title>
-</head>
+  <style>
+    body {
+      backgroud-color: light blue;
+      color:dark blue;
+    }
+    h1{
+       text-align: center;
+      background-color: Red !important;
+    }
+     .backcolor { 
+       background-color: AntiqueWhite;
+    }
+    #tableheader {
+      font-weight: bold;
+      font-style: intalic;
+      background-color:Red
+    }
+    img {
+      width: 300px;
+        height: 200px;
+      border-color: dark blue;
+      img-align: center; 
+    }
+  </style>
+     </head>
 <body style: "background:tan;" >
-<h1> <center> <u>The Five Pillars of Islam </u> </center> </h1>
-  <h2> Shahada </h2>
+<h1 class= "backcolor"> <center> <u>The Five Pillars of Islam </u> </center> </h1>
+  <h2 class= "backcolor"> Shahada </h2>
   <p> The Shahada is the first step to becoming a Muslim. 
     Ash-hado= I bare witness. Ana la illaha illa Allah= That there is no god worthy of worship, but Allah. Wa Ana Muhammad Rasool-Allah= And that Muhammad is the prophet.  </p>
 <br>
-<h2> Salat </h2>
+<h2 class= "backcolor"> Salat </h2>
   <p> This table explains the 5 daily prayes:
   <table>
     <table border="1">
+    <th id= "tableheader"> 
       <caption> The Daily Prayers </caption>
     <tr>
-      <th> Names </th> 
-      <th> Rakat </th>
-      <th> Timing </th>
+      <td> Names </th> 
+      <td> Rakat </th>
+      <td> Timing </th>
     </tr>
     <tr>
-      <th> Fajir </th>
-      <th> 2 </th>
-      <th> Before sunrise </th>
+      <td> Fajir </th>
+      <td> 2 </th>
+      <td> Before sunrise </th>
     </tr>
     <tr> 
-      <th> Duhar </th>
-      <th> 4 </th>
-      <th> Mid day </th>
+      <td> Duhar </th>
+      <td> 4 </th>
+      <td> Mid day </th>
     </tr>
     <tr>
       <td> Asr </td>
@@ -49,7 +74,7 @@
      </a>
   </p>
   <br>
-<h2> Sawm </h2>
+<h2 class= "backcolor"> Sawm </h2>
 <p>
  Sawm is an arabic word for Fasting. Muslims fast on a special month called: Ramadan. They fast from sunset and break their fast at sundown.While fasting, there are many things Muslims should be aware of:
   <ol>
@@ -65,17 +90,17 @@
   </a>
     </p>
 <br>
-<h2> Zakat </h2>
+<h2 class= "backcolor"> Zakat </h2>
 <p> Zakat is an arabic term for charity. This is every important to Muslims, because it reminds them that they shouldn't be greedy and always share. This is a helpful website that explains why Muslims do Zakat:
   <a href= "https://www.islamichelp.org.uk/zakat/" > </a>
   </p>
   <br>
-<h2> Hajj </h2> 
+<h2 class= "backcolor"> Hajj </h2> 
 <p> Hajj is another Arabic term meaning: Pilgramage. Muslims go once a year to Mekkah to make their duties at the kabaa (the house of their lord). If they are not able ot pay or they are not in good health, they dont have to go. This is a website to help you know more about it:
   <a href= "http://theconversation.com/explaining-the-muslim-pilgrimage-of-hajj-83284" > </a>
   </p>
 <hr> </hr>
-<h3> citation </h3>
+<h3 class= "backcolor"> citation </h3>
   <ul>
     <li> <a href= "https://www.islamicity.org/?category_name=americas&tag=fasting-sawm&case=-{title:category.americas|post_tag.fasting-sawm}{id:95}" > </li> </a>
 <li> <a href= "https://insideislam.wisc.edu/2012/01/salah-for-the-mind-body-and-soul/" > </li> </a> 
