--- a/index.html
+++ b/index.html
@@ -2,30 +2,21 @@
 <html>
 <head>   
 <title> The five Pillars of Islam </title>
-  <style>
-    body {
-      backgroud-color: lightblue;
-      color:darkblue;
-    }
-    h1{
-       text-align: center;
-      background-color: Red !important;
-    }
-     .backcolor { 
-       background-color: orange;
-    }
-    #tableheader {
-      font-weight: bold;
-      font-style: intalic;
-      background-color:Red
-    }
-    img {
-      width: 300px;
-        height: 200px;
-      border-color: dark blue;
-      img-align: center; 
-    }
-  </style>
+<a href= "Shahada.html">
+   Shahada 
+  </a>
+  <a href= "Salat.html">
+    Salat
+  </a>
+  <a href= "sawm.html">
+     Sawm
+     </a>
+  <a href= "Zakat.html">
+    Zakat
+  </a>
+  <a href= "Hajj.html">
+    Hajj
+  </a>
      </head>
 <body style: "background:tan;" >
 <h1 class= "backcolor"> <center> <u>The Five Pillars of Islam </u> </center> </h1>
