--- a/Shahada.html
+++ b/Shahada.html
@@ -1,5 +1,11 @@
+<DOCTYPE.html>
+  <html>
+    <head>
+      <title> The five Pillars of Islam </title>
+     </head>
 <h1 class= "backcolor"> <center> <u>The Five Pillars of Islam </u> </center> </h1>
   <h2 class= "backcolor"> Shahada </h2>
   <p> The Shahada is the first step to becoming a Muslim. 
     Ash-hado= I bare witness. Ana la illaha illa Allah= That there is no god worthy of worship, but Allah. Wa Ana Muhammad Rasool-Allah= And that Muhammad is the prophet.  </p>
 <br>
+  </html>
