--- a/index.html
+++ b/index.html
@@ -3,28 +3,21 @@
 <head>   
 <title> The five Pillars of Islam </title>
 <body style: "background:tan;" >
-   
 <h1 class= "backcolor"> <center> <u>The Five Pillars of Islam </u> </center> </h1>
    </head>
-   <a href= "Shahada.html">
+  <ol>
+  <li> <a href= "Shahada.html">
    Shahada 
-  </a>
+     </a> </li>
    <br>
-  <a href= "Salat.html">
+  <li> <a href= "Salat.html">
     Salat
-  </a>
+     </a> </li>
    <br>
-  <a href= "sawm.html">
+  <li> <a href= "sawm.html">
      Sawm
-     </a>
+     </a> </li>
    <br>
-  <a href= "Zakat.html">
+  <li> <a href= "Zakat.html">
     Zakat
-  </a>
-   <br>
-  <a href= "Hajj.html">
-    Hajj
-  </a>
-   <br>
-   </body>
-   </html>
+  </a> <\li>
