--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>   
-<title> The five Pillars of Islam </title>
+<title> The five Pillars of Islam </title>   </head>
 <body style: "background:tan;" >
 <h1 class= "backcolor"> <center> <u>The Five Pillars of Islam </u> </center> </h1>
-   </head>
+<body>
   <ol>
   <li> <a href= "Shahada.html">
    Shahada 
@@ -22,4 +22,5 @@
     Zakat
   </a> <\li>
      </ol>
+     </body>
      </html>
