--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <li> <a href= "Zakat.html">
     Zakat
   </a> </li>
-     </ol>
+     <li> <a href= "Hajj.html">
+       Hajj
+       </a> </li>
+  </ol>
      </body>
      </html>
