--- a/Shahada.html
+++ b/Shahada.html
@@ -8,4 +8,9 @@
   <p> The Shahada is the first step to becoming a Muslim. 
     Ash-hado= I bare witness. Ana la illaha illa Allah= That there is no god worthy of worship, but Allah. Wa Ana Muhammad Rasool-Allah= And that Muhammad is the prophet.  </p>
 <br>
+    <hr>
+   <dv>
+    Ikramazing 
+    iamthebest@gmail.com
+    </dv>
   </html>
