--- a/Shahada.html
+++ b/Shahada.html
@@ -9,8 +9,8 @@
     Ash-hado= I bare witness. Ana la illaha illa Allah= That there is no god worthy of worship, but Allah. Wa Ana Muhammad Rasool-Allah= And that Muhammad is the prophet.  </p>
 <br>
     <hr>
-   <dv>
+   <div>
     Ikramazing 
     iamthebest@gmail.com
-    </dv>
+    </div>
   </html>
