--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     Salat
      </a> </li>
    <br>
-  <li> <a href= "sawm.html">
+  <li> <a href= "Sawm.html">
      Sawm
      </a> </li>
    <br>
