--- a/Zakat.html
+++ b/Zakat.html
@@ -4,3 +4,8 @@
   <a href= "https://www.islamichelp.org.uk/zakat/" > </a>
   </p>
   <br>
+ <hr>
+   <div>
+    Ikramazing 
+    iamthebest@gmail.com
+    </div>
