--- a/Salat.html
+++ b/Salat.html
@@ -35,3 +35,8 @@
       <td> 4 </td>
       <td> Night time </td> 
        </table>
+ <hr>
+   <div>
+    Ikramazing 
+    iamthebest@gmail.com
+    </div>
