--- a/Sawm.html
+++ b/Sawm.html
@@ -1,3 +1,8 @@
+<DOCTYPE.html>
+  <html>
+    <head>
+      <title> The five Pillars of Islam </title>
+     </head>
 <h2 class= "backcolor"> Sawm </h2>
 <p>
  Sawm is an arabic word for Fasting. Muslims fast on a special month called: Ramadan. They fast from sunset and break their fast at sundown.While fasting, there are many things Muslims should be aware of:
@@ -18,3 +23,4 @@
     Ikramazing 
     iamthebest@gmail.com
     </div>
+ </html>
