--- a/Sawm.html
+++ b/Sawm.html
@@ -3,6 +3,7 @@
     <head>
       <title> The five Pillars of Islam </title>
      </head>
+    <body>
 <h2 class= "backcolor"> Sawm </h2>
 <p>
  Sawm is an arabic word for Fasting. Muslims fast on a special month called: Ramadan. They fast from sunset and break their fast at sundown.While fasting, there are many things Muslims should be aware of:
@@ -23,4 +24,5 @@
     Ikramazing 
     iamthebest@gmail.com
     </div>
+    </body>
  </html>
