--- a/Salat.html
+++ b/Salat.html
@@ -1,4 +1,9 @@
-
+<!DOCTYPE.html>
+<html>
+  <head.
+         <title> The five Pillars of Islam </title>
+     </head>
+<body>
 <h2 class= "backcolor"> Salat </h2>
   <p> This table explains the 5 daily prayes:
   <table>
@@ -40,3 +45,5 @@
     Ikramazing 
     iamthebest@gmail.com
     </div>
+</body>
+</html>
