--- a/Zakat.html
+++ b/Zakat.html
@@ -1,3 +1,9 @@
+<!DOCTYPE.html>
+<html>
+  <head>
+         <title> The five Pillars of Islam </title>
+     </head>
+<body>
 <br>
 <h2 class= "backcolor"> Zakat </h2>
 <p> Zakat is an arabic term for charity. This is every important to Muslims, because it reminds them that they shouldn't be greedy and always share. This is a helpful website that explains why Muslims do Zakat:
@@ -9,3 +15,5 @@
     Ikramazing 
     iamthebest@gmail.com
     </div>
+  </body>
+</html>
